Update and rename ChowZ.DA5020.Practicum1.html to pharma-sales-report.html

--- a/pharma-sales-report.html
+++ b/pharma-sales-report.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Zoe Chow" />
 
 
-<title>Data Analytics &amp; Visualization</title>
+<title>Pharma Sales Analytics &amp; Forecast</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
